# desafio163

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
include/: bitcoin_utils.h  gpu_key_finder.cuh  key_finder.h
resultados/: key_found_20241217_104308.txt
src/: bitcoin_utils.cpp  gpu_key_finder.cu  key_finder.cpp  main.cpp
